chore: Update Maven compiler version to 22